@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2019 LabKey Corporation
+ * Copyright (c) 2008-2026 LabKey Corporation
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -35,12 +35,6 @@ import java.util.Properties;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
-
-/*
-* User: Dave
-* Date: Dec 8, 2008
-* Time: 11:41:00 AM
-*/
 
 /**
  * Represents a compressed module archive file. Use this to explode the module
@@ -87,7 +81,7 @@ public class ModuleArchive
                 @Override
                 public void startElement(String uri, String localName, String qName, Attributes attributes) throws SAXException
                 {
-                    String parent = elementStack.isEmpty() ? "" : elementStack.get(elementStack.size()-1);
+                    String parent = elementStack.isEmpty() ? "" : elementStack.getLast();
                     elementStack.add(qName+"#"+attributes.getValue("id"));
                     if (qName.equals("property") && "bean#moduleBean".equals(parent))
                     {
@@ -99,7 +93,7 @@ public class ModuleArchive
                 @Override
                 public void endElement(String uri, String localName, String qName) throws SAXException
                 {
-                    elementStack.remove(elementStack.size()-1);
+                    elementStack.removeLast();
                 }
             });
 
